# pageloot_task

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: db.json
src/apps/accounts/: models.py
src/apps/accounts/management/commands/: seed_db.py
src/apps/accounts/migrations/: 0001_initial.py
src/apps/expenses/: filters.py  models.py  serializers.py  urls.py  views.py
src/apps/expenses/migrations/: 0001_initial.py
src/settings/: pagination.py  settings.py  urls.py
